fabric/testdata/out/ing_spp-perf-test-product-search-post-api-product-queries-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-perf-test-product-search-master-301\":100.0,\"spp-perf-test-product-search-pr-351-1\":0.0}","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/product-queries\") \u0026\u0026 Method(\"POST\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"26cb89c8-ae17-11e9-b380-0a202eda0878","deployment-id":"d-2nf1yhksdppk82q2khnu2w78qd","pipeline-id":"l-9jcuet1pfx4u7ewpus6zwwqfj"},"name":"spp-perf-test-product-search-post-api-product-queries-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-perf-test.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-perf-test-product-search-master-301","servicePort":8080},"pathType":"ImplementationSpecific" [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-perf-test-product-search-master-301":100.0,"spp-perf-test-product-search-pr-351-1":0.0}'
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/api/product-queries") && Method("POST")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-08-30T14:08:35Z"
  generation: 2
  labels:
    controller-uid: 26cb89c8-ae17-11e9-b380-0a202eda0878
    deployment-id: d-2nf1yhksdppk82q2khnu2w78qd
    pipeline-id: l-9jcuet1pfx4u7ewpus6zwwqfj
  name: spp-perf-test-product-search-post-api-product-queries-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-perf-test-product-search
    uid: 26cb89c8-ae17-11e9-b380-0a202eda0878
  resourceVersion: "1357489317"
  uid: 31287346-fbfc-40a2-a484-6848fcf61fe4
spec:
  rules:
  - host: spp-product-search-perf-test.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-perf-test-product-search-master-301
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-perf-test-product-search-pr-351-1
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
